home page spacing fixed and added color to icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .music-icon {
-    color: #fff;
+    color: #4365fc;
 }
 
 a {
@@ -445,6 +445,7 @@ footer {
     font-size: 45px;
     font-weight: 600;
     text-align: center;
+    text-decoration: underline;
 }
 
 .menuitem {
